# 2D-Self-driving-car-project-with-neutral-network-and-genetic-algorithms

./: .gitignore  CMakeLists.txt  GeneticAlgorithmSimulator.cpp  GeneticAlgorithmSimulator.h  README.md  main.cpp
checkpoints/: track0.json  track1.json
include/: AssetManager.h  Component.h  Entity.h  Event.h  EventManager.h  Math.h  Random.h  Renderer2D.h  SDLRenderer2D.h  SDLWindow.h  Scene.h  Signal.h  Simulator.h  Timestep.h  UUID.h  Utility.h  Window.h  base.h
json-3.12.0/single_include/nlohmann/: CMakeLists.txt
src/: AssetManager.cpp  Component.cpp  Entity.cpp  EventManager.cpp  SDLRenderer2D.cpp  SDLWindow.cpp  Scene.cpp  Simulator.cpp  UUID.cpp  Window.cpp
